<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChangeTheWorld</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_hundred">100 Miles</string>
    <string name="menu_state">State</string>
    <string name="menu_country">Country</string>
    <string name="menu_globally">Globally</string>
    <string name="menu_followers">Followers</string>
    <string name="menu_today">Today</string>
    <string name="menu_week">This Week</string>
    <string name="menu_month">This Month</string>
    <string name="menu_year">This Year</string>
    <string name="menu_ever">All Time</string>
    <string name="menu_ratio">Minimum Ratio</string>
    <string name="menu_thumbs">Minimum Thumbs</string>
    <string name="menu_ratio_caps">MINIMUM RATIO</string>
    <string name="menu_thumbs_caps">MINIMUM THUMBS</string>
    <string name="menu_recent">Most Recent</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_trending">TRENDING</string>
    <string name="menu_category">CATEGORY</string>
    <string name="idea_category">Category:  </string>
    <string name="idea_subcategory">Subcategory:  </string>
    <string name="idea_idea_title">Title: </string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_add">ADD IDEA</string>
    <string name="menu_top_users">LEADERBOARD</string>
    <string name="menu_accurate">Accurate Thumbs</string>
    <string name="menu_added">Most Quality Ideas</string>
    <string name="menu_quality">Highest Rated Idea</string>
    <string name="menu_comments">Best Comments</string>
    <string name="menu_minimum_thumbs">Enter a minimum number of ratings (0-X)</string>
    <string name="menu_minimum_ratio">Enter a minimum ratio to filter for (1 to 99%)</string>
    <string name="preference_file_key">com.thekarlbrown.ChangeTheWorld.preference_file_key</string>
    <string name="preference_setup">com.thekarlbrown.ChangeTheWorld.preference_setup</string>
    <string name="preference_userid">com.thekarlbrown.ChangeTheWorld.preference_userid</string>
    <string name="preference_ideas_seen">com.thekarlbrown.ChangeTheWorld.preference_ideas_seen</string>
    <string name="preference_bar_ratio">com.thekarlbrown.ChangeTheWorld.preference_bar_ratio</string>
    <string name="preference_bar_minimum">com.thekarlbrown.ChangeTheWorld.preference_bar_minimum</string>
    <string name="preference_username">com.thekarlbrown.ChangeTheWorld.preference_username</string>
    <string name="preference_fav_list">com.thekarlbrown.ChangeTheWorld.preference_fav_list</string>
    <string name="preference_friend_list">com.thekarlbrown.ChangeTheWorld.preference_friend_list</string>
    <string name="preference_password">com.thekarlbrown.ChangeTheWorld.preference_password</string>
    <string name="idea_title">IDEA</string>
    <string name="comments_coming_soon">COMMENTS\nCOMING\nSOON</string>
    <string name="app_title_bold">CHANGE\nTHE\nWORLD</string>
    <string name="search_dialogue">Find a specific idea by searching</string>
    <string name="search_cancel">Cancel Search</string>
    <string name="search_accept">Search Description</string>
    <string name="search_neutral">Search By User</string>
    <string name="category_selection">Please select a category</string>
    <string name="add_title">Idea Title: </string>
    <string name="add_edit_title">What will you call your idea?</string>
    <string name="add_description">Description: </string>
    <string name="add_edit_description">-Write your idea\'s Title above\n-Choose a Category and Subcategory!\n-Describe what you are thinking as best you can.</string>
    <string name="add_draft">Save as Draft</string>
    <string name="add_submit">Submit your Idea</string>
    <string name="add_category_subcategory">Category: </string>
    <string name="add_select_category">Select a Category</string>
    <string name="add_select_subcategory">Select a Subcategory</string>
    <string name="add_draft_success">Your draft was saved successfully</string>
    <string name="add_draft_fail">Your draft failed to save</string>
    <string name="add_submit_success">Your idea was successfully submitted</string>
    <string name="add_submit_fail">Your idea failed to submit! Your title is not unique and must be modified!</string>
    <string name="add_fields_bad">Please correctly fill out all fields</string>
    <string name="add_external_unavail">External storage is currently unavailable</string>
    <string name="leaderboard_welcome">Please select an Award Category from above!</string>
    <string name="ratio_dialogue_cancel">No Ratio Filter</string>
    <string name="ratio_dialogue_change">Set Ratio Filter</string>
    <string name="thumb_dialogue_change">Set Minimum Thumbs</string>
    <string name="thumb_dialogue_cancel">No Thumb Requirement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_your_ideas">Your Ideas</string>
    <string name="profile_favorite_ideas">FAVORITE IDEAS</string>
    <string name="profile_followers">FOLLOWERS IDEAS</string>
    <string name="profile_drafts">YOUR DRAFTS</string>
    <string name="profile_prof_log">Log Out</string>
    <string name="profile_error_unknown">Something went wrong with your file</string>
    <string name="profile_error_access">We cannot read/write the SD/External</string>
    <string name="profile_no_drafts">You have not saved any drafts yet</string>
    <string name="page_idea_other">User\'s Ideas</string>
    <string name="page_idea_comment">Add Improvement</string>
    <string name="page_idea_follow">Follow User</string>
    <string name="page_idea_upvote">Upvote</string>
    <string name="page_idea_downvote">Downvote</string>
    <string name="page_idea_favorite">Favorite</string>
    <string name="page_idea_unfavorite">Unfavorite</string>
    <string name="page_idea_unfollow">Unfollow User</string>
    <string name="login_welcome">The app that enables the sharing of new ideas!\n\nNavigate with the top icons!\n\nCreate an account or login to continue!</string>
    <string name="login_login_button">Login</string>
    <string name="login_create_button">Create account</string>
    <string name="login_username_prompt">Please enter your username</string>
    <string name="login_username_problem">Max 25 letters/numbers only</string>
    <string name="login_password_prompt">Please enter your password</string>
    <string name="login_password_confirm">Confirm your password</string>
    <string name="login_password_problem">Your passwords do not match</string>
    <string name="login_email_prompt">Please enter an Email</string>
    <string name="login_email_confirm">Confirm your Email</string>
    <string name="login_email_problem_valid">Your Email is not valid</string>
    <string name="login_email_problem_matching">Your Email\'s don\'t match</string>
    <string name="login_error_login">Your login credentials were rejected! Is your internet connected?\nDoes your username exist? Was your password correct?</string>
    <string name="login_error_create">Your account creation was rejected! Is your internet connected?\nSuccessful Login automatically logs you in</string>
    <string name="progress_dialog_login">Verifying Login</string>
    <string name="progress_dialog_create">Verifying New Account</string>
    <string name="progress_dialog_google">Querying Location API</string>
    <string name="progress_dialog_loading">Loading Idea List</string>
    <string name="progress_dialog_adding">Adding Idea to Database</string>
    <string name="idea_list_empty">There does not seem to be any ideas here yet! Too bad. Either you have internet connectivity issues, or you are in an empty category</string>
</resources>
