<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:padding="5dip"
    >
    <TextView android:id="@+id/time_day"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_today"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        />

    <TextView android:id="@+id/time_week"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_week"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/time_month"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_month"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/time_year"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_year"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/time_ever"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_ever"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>


</LinearLayout>