<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00D9D9"
    android:padding="5dip"
    >
    <TextView android:id="@+id/filter_ratio"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_ratio"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"
        />

    <TextView android:id="@+id/filter_thumbs"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_thumbs"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/filter_recent"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_recent"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>



    <TextView android:id="@+id/filter_toprated"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_top_rated"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        />
</LinearLayout>