<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:padding="5dip"
    >
    <TextView android:id="@+id/bot_area_local"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_nearby"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        />

    <TextView android:id="@+id/bot_area_hun"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_hundred"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/bot_area_state"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_state"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/bot_area_country"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_country"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dip"/>

    <TextView android:id="@+id/bot_area_global"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_globally"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"/>

    <TextView android:id="@+id/bot_area_friends"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_friends"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_weight="1"
        />
</LinearLayout>